updated xiaohongshu demo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Allows for a responsive view -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/2a3a3d96e0.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
   </head>
 
   <body>
