adjusted xiaohongshu demo

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>The Alchemist</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>Paul Coelho</p>
                 </div>
 
               </div>
@@ -56,11 +56,11 @@
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>孩子你慢慢来</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>龙应台</p>
                 </div>
 
               </div>
@@ -79,11 +79,11 @@
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>Just do IT</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>Tinyfool</p>
                 </div>
 
               </div>
@@ -102,11 +102,11 @@
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>你不可不知的人性</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>刘墉</p>
                 </div>
 
               </div>
@@ -125,11 +125,11 @@
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>当生命陷落时</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>佩玛·丘卓</p>
                 </div>
 
               </div>
@@ -148,11 +148,11 @@
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>Kite Runner</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p style="font-size: 15px">Khaled Hosseini</p>
                 </div>
 
               </div>
@@ -166,16 +166,16 @@
         </div>
 
         <div class="card-container">
-          <img class="card-image" src="images/sw-1.jpeg">
+          <img class="card-image" src="images/好好说话.jpeg">
 
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>好好说话</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>马东</p>
                 </div>
 
               </div>
@@ -189,16 +189,16 @@
         </div>
 
         <div class="card-container">
-          <img class="card-image" src="images/sw-1.jpeg">
+          <img class="card-image" src="images/被讨厌的勇气.jpg">
 
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>被讨厌的勇气</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>岸见一郎</p>
                 </div>
 
               </div>
@@ -212,16 +212,16 @@
         </div>
 
         <div class="card-container">
-          <img class="card-image" src="images/sw-1.jpeg">
+          <img class="card-image" src="images/Diary of a wimpy kid.jpeg">
 
           <div class="flex-container">
 
             <div class="info-box">
-              <h3>Book Name</h3>
+              <h3>Diary of a wimpy kid</h3>
               <div class="writer-info">
                   <img class="avatar" src="images/sw-5.jpeg">
                 <div class="writer-name">
-                 <p>Writer</p>
+                 <p>Jeff Kinney</p>
                 </div>
 
               </div>
